@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-11T01:13:19Z",
+  "timestamp" : "2022-12-11T08:16:11Z",
   "count_outdated" : 712,
   "uniques_outdated" : 401,
-  "count" : 735,
-  "uniques" : 410,
+  "count" : 737,
+  "uniques" : 411,
   "clones" : [
     {
       "timestamp": "2022-11-27T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 1, 6 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-12-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
