@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 6,
+  "count": 25,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-11-27T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-12-10T00:00:00Z",
       "count": 6,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-12-11T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
